# nix-scripts

./: .gitignore  flake.nix
c/: .gitignore  flake.nix
c/sm-proc/: CMakeLists.txt
c/sm-proc/docs/: ai_pdf_extraction.md  spec.org
c/sm-proc/examples/: sm-proc.cfg
c/sm-proc/src/: categoriser.c  categoriser.h  config.c  config.h  main.c  paperless_api.c  paperless_api.h  transaction.c  transaction.h  utils.c  utils.h  xlsx_writer.c  xlsx_writer.h
c/sm-proc/src/ai/: ai_service.c  ai_service.h
c/sm-proc/src/parsers/: anz_parser.c  anz_parser.h  cba_parser.c  cba_parser.h  parser.h  parser_registry.c
c/sm-proc/tests/: test_ai_service.c  test_cba_ai_config.c  test_framework.h  test_parsers.c
c/sm-proc/tests/fixtures/: cba_api_response.json
c/sm-proc/tests/mocks/: ai_service_mock.c  ai_service_mock.h
go/: flake.nix
go/statement-extractor/: go.mod  go.sum  gomod2nix.toml
go/statement-extractor/cmd/statement-extractor/: main.go  main_test.go
go/statement-extractor/configs/: statement-extractor.toml
go/statement-extractor/docs/: spec.md
go/statement-extractor/internal/config/: config.go  config_test.go
go/statement-extractor/pkg/transaction/: transaction.go  transaction_test.go
py/: flake.nix  immich-download-trashed.py  immich-season-organiser.py
rs/: flake.nix
rs/paperless-to-spreadsheet/: Cargo.toml
rs/paperless-to-spreadsheet/src/: main.rs
sh/: compare-dirs.sh  flake.nix  test-fail2ban.sh
templates/default/: flake.nix
